<resources>
    <string name="app_name">gcoole</string>
    <string name="Prop">Proprietario</string>
    <string name="Prod">Produtores</string>
    <string name="Vaca">Vaca</string>
    <string name="Salvar">Salvar</string>
    <string name="nome">Nome:</string>
    <string name="tipo">Tipo:</string>
    <string name="propTaque">Proprietario do Taque</string>
    <string name="numProp">Número do Produtor</string>
    <string name="nomecomp">Nome Completo</string>
    <string name="numeroProd">Numero do Produtor</string>
    <string name="delete">Deletar</string>
    <string name="Editar">Editar</string>
    <string name="PropDoTaque">Proprietario do Tanque</string>
    <string name="nomeVaca">Nome da Vaca</string>
    <string name="numeVaca">Número de Indetificação da Vaca</string>
    <string name="inserir">Inserir</string>
    <string name="inserirProducao">Inserir Produção</string>
    <string name="quantLeite">Quantidade de Leite</string>
    <string name="quantLeiteNoDia">Quantidade de Leite total no Dia</string>
    <string name="DataProducao">Data da Produção</string>
    <string name="NomeProdutor">Nome do Produtor:</string>
    <string name="quant">Quantidade:</string>
    <string name="data">Data da Produção:</string>
    <string name="producao">Produção</string>
    <string name="filtro">Filtro:</string>
    <string name="filtrar">Filtrar</string>
    <string name="ano">Ano</string>
    <string name="valorPorLitro">Valor Por Litro</string>
    <string name="valorPorLitroMensal">Valor do Litro Mensal</string>
    <string name="mesEAno">Mes e Ano Referênte</string>
    <string name="datainserirvalor">Data:</string>
    <string name="vacaPrenha">Vacas Prenhas</string>
    <string name="dataInicilGestacao">Data do inicio da Gestação</string>
    <string name="numeroGestacao">Número da Gestação</string>
    <string name="dataSecagem">Data da Secagem</string>
    <string name="dataParto">Data Provalvel do Parto</string>
    <string name="gestor">Gestor</string>
    <string name="gestorNome">Nome do Gestor</string>
    <string name="telaInical">Selecione o Tipo de Acesso:</string>
    <string name="bemVindo">Bem vindo</string>
    <string name="cooperativa">Cooperativa de Leite</string>
    <string name="de">de</string>
    <string name="codigo">Código de Sicronização</string>
    <string name="entre">Entre com seu</string>
    <string name="para">Para Sicronizar seus dados</string>
    <string name="sicro">Sincronizar</string>
    <string name="ajuda">Ajuda</string>
    <string name="voltar">Voltar</string>
    <string name="modoProp">Modo Produtor:</string>
    <string name="modoGestor">O Modo Gestor é para:</string>
    <string name="modoGestro1">1°Gestores de cooperativas de tangue de leite.</string>
    <string name="modoGestro2">2°Proprietários de tangue de leite que possui produtores de outra propriedade que utilizam seu tangue.</string>
    <string name="modoGestro3">3°Proprietários de tangue de leite para gerenciar somente sua produção.</string>
    <string name="modoGestro4">4°Pequeno produtor para gerenciar suas produções possuindo tangue de leite ou não.</string>
    <string name="modoGestro5">Caso seja membro de uma cooperativa ou utiliza tangue de outra propriedade solicite o código de acesso para o gestor e utilize o modo produtor para ter acesso a suas informações.</string>
    <string name="InserirProduçãoPorVaca">Inserir Produção por Vaca</string>
    <string name="producaoPorVaca">Produção por Vaca</string>
    <string name="DataInicial">Data Inicial</string>
    <string name="DataFinal">Data Final</string>
    <string name="Atualizar">Atualizar Dados</string>
    <string name="outraforma">Outra Forma de Cadastro</string>
    <string name="logarGoogle">Cadastrar com Google</string>

</resources>