<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/listProd"
        android:icon="@drawable/add_foreground"
        android:title="@string/Prod" />
    <item
        android:id="@+id/ListVaca"
        android:title="@string/Vaca" />
    <item
        android:id="@+id/idVacaPrenhaMenu"
        android:title="@string/vacaPrenha" />
    <item
        android:id="@+id/idInserirProducao"
        android:title="@string/inserirProducao" />
    <item
        android:id="@+id/idMenuInserirProducaoPorVaca"
        android:title="@string/InserirProduçãoPorVaca" />
    <item
        android:id="@+id/idListProducao"
        android:title="@string/producao" />
    <item
        android:id="@+id/idListProducaoPorVaca"
        android:title="@string/producaoPorVaca" />
    <item
        android:id="@+id/idValorPorLitroMain"
        android:title="@string/valorPorLitro" />
</menu>