<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText


            android:id="@+id/idValorPorLitroInserir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/valorPorLitroMensal"
            android:inputType="number"
            android:padding="14dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:orientation="horizontal">


        <TextView

            android:layout_width="3dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/datainserirvalor"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner

            android:id="@+id/idSpinnerMesInserirValor"
            android:layout_width="113dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText

            android:id="@+id/idAnoInsirirValor"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ano"
            android:inputType="number" />


    </LinearLayout>


    <Button


        android:id="@+id/idBtInserirValorPorLitro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/inserir" />

</LinearLayout>