<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    tools:context="com.example.gcoole.Adapters.AdapterProdutor">


    <TextView


        android:id="@+id/idActivityNomeVaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/nome"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView


        android:id="@+id/idActivityNumeroGestacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/numeroGestacao"
        android:textColor="#615C5C"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/idActivityDataGestacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/dataInicilGestacao"
        android:textSize="16sp" />


</LinearLayout>