<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText


            android:id="@+id/idInserirNumerogestacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/numeroGestacao"
            android:inputType="number"
            android:padding="14dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/idInserirdataInicilGestacao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/white"
            android:hint="@string/dataInicilGestacao"
            android:inputType="number"
            android:padding="14dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/textView"
            android:layout_width="99dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/Vaca"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner

            android:id="@+id/idSpinnerInserirvacaPrenha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>


    <Button


        android:id="@+id/idInserirVacaPrenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:text="@string/inserir" />

</LinearLayout>