<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    tools:context="com.example.gcoole.Adapters.AdapterProducaoPorVaca">


    <TextView


        android:id="@+id/idNomeVacaProducaoPorVaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/NomeProdutor"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView


        android:id="@+id/idQuantActProducaoPorVaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/quantLeiteNoDia"
        android:textColor="#615C5C"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/idDataActProducaoPorVaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/DataProducao"
        android:textColor="#615C5C"
        android:textSize="16sp" />


</LinearLayout>